--- a/relax_data_science_challenge.ipynb
+++ b/relax_data_science_challenge.ipynb
@@ -59,7 +59,7 @@
     "I had to create 'adopted_user' in order to define adopted users. Adopted user is as a user who has logged into the product on three different days.\n",
     "\n",
     "\n",
-    "Interesting findings\n",
+    "Summary\n",
     "\n",
     "•\tAdopted User is imbalanced; it has 88% of the users are not adopted users and 12% of the users are adopted users\n",
     "\n",
@@ -70,13 +70,13 @@
     "•\tAccount Creation by month May has the most adopted user, and it has the least non-adopted user  \n",
     "\n",
     "\n",
-    "Most Interesting Finding:\n",
+    "\n",
     "    \n",
     "•\tUser email distribution- Gmail has the most adopted user, and yahoo has the most non-adopted user  \n",
     "\n",
     "Further Investigation:\n",
     "    \n",
-    "Apply Machine learning on features in order to determine/predict an \"adopted user\" and strong relationship with how a user commits to a service provider.\n"
+    "Apply Machine learning on features in order to predict an adopted user and relationship between features .\n"
    ]
   },
   {
