--- a/relax_data_science_challenge.ipynb
+++ b/relax_data_science_challenge.ipynb
@@ -56,7 +56,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I had to create 'adopted_user' in order to define adopted users. Adopted user is as a user who has logged into the product on three different days.\n",
+    "I had to create 'adopted_user' in order to define adopted users. Adopted user is as a user who has logged into the product more three times.\n",
     "\n",
     "\n",
     "Summary\n",
