--- a/relax_data_science_challenge.ipynb
+++ b/relax_data_science_challenge.ipynb
@@ -72,7 +72,7 @@
     "\n",
     "\n",
     "    \n",
-    "•\tUser email distribution- Gmail has the most adopted user, and yahoo has the most non-adopted user  \n",
+    "•\tUser email distribution- Gmail has the most adopted user, and the most non-adopted user among others  \n",
     "\n",
     "Further Investigation:\n",
     "    \n",
